--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.19.0",
     "eslint-config-next": "12.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.5",
     "typescript": "4.7.4"
   }
