HTTPS化完了。ドキュメント執筆完了

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "set HTTPS=true&&node ./server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "express": "^4.18.1",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
