--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "set HTTPS=true&&node ./server.js",
     "dev:http": "set HTTPS=false&&node ./server.js",
+    "dev:m": "HTTPS=true node ./server.js",
+    "dev:m:http": "HTTPS=false node ./server.js",
     "build": "next build",
     "start": "set NODE_ENV=production&&set HTTPS=true&&node ./server.js",
     "start:http": "set NODE_ENV=production&&set HTTPS=false&&node ./server.js",
