--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.6",
     "express": "^4.18.1",
     "next": "12.2.1",
+    "next-auth": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar": "^1.3.1"
